updating main pages

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body a {
   margin: 10px;
   border: 3px solid #bae8e8;
   border-radius: 5px;
-  color: white;
+  color: #2d334a;
   font-size: 40px;
   text-align: center;
 }
@@ -57,6 +57,6 @@ body a {
 }
 
 #createaccount:hover {
-  background-color: grey;
+  background-color: #e3f6f5;
   transition: 1s;
 }
